--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,11 @@
       <artifactId>gson</artifactId>
       <version>2.8.5</version>
     </dependency>
+    <dependency>
+        <groupId>com.github.crawler-commons</groupId>
+        <artifactId>crawler-commons</artifactId>
+        <version>1.3</version>
+    </dependency>
     <!-- Test Dependencies -->
     <dependency>
       <groupId>junit</groupId>
